Design is fiiine

--- a/SimTECH/SimTECH/Pages/Factors/Manufacturers.razor
+++ b/SimTECH/SimTECH/Pages/Factors/Manufacturers.razor
@@ -14,8 +14,8 @@
         <HeaderContent>
             <MudTh>Name</MudTh>
             <MudTh>Pace</MudTh>
-            <MudTh>Maximum wear</MudTh>
-            <MudTh>Minimum wear</MudTh>
+            <MudTh>Max. wear</MudTh>
+            <MudTh>Min. wear</MudTh>
             <MudTh>State</MudTh>
             <MudTh></MudTh>
         </HeaderContent>
