--- a/SimTECH/SimTECH/Pages/Season/Calendar.razor
+++ b/SimTECH/SimTECH/Pages/Season/Calendar.razor
@@ -13,6 +13,7 @@
         {
             <MudButtonGroup Variant="Variant.Filled" Color="Color.Inherit" Size="Size.Large">
                 <MudButton StartIcon="@Icons.Material.Outlined.CarRepair" IconColor="Color.Primary" OnClick="AddRaces">Add races</MudButton>
+                <MudButton StartIcon="@Icons.Material.Outlined.CarRepair" IconColor="Color.Primary" OnClick="AddRaces">Copy races of season</MudButton>
             </MudButtonGroup>
         }
     </ToolBarContent>
