--- a/SimTECH/SimTECH/Pages/Season/Overview.razor
+++ b/SimTECH/SimTECH/Pages/Season/Overview.razor
@@ -35,7 +35,6 @@
                                     </MudButtonGroup>
                                 }
                             </MudStack>
-                            
                         </MudPaper>
                     </MudItem>
 
@@ -84,14 +83,8 @@
             <MudTabPanel Text="Standings" BadgeData='"S"' BadgeColor="Color.Tertiary">
                 <Standings />
             </MudTabPanel>
-            <MudTabPanel Text="Drivers">
-                <SeasonDrivers />
-            </MudTabPanel>
-            <MudTabPanel Text="Teams">
-                <SeasonTeams />
-            </MudTabPanel>
-            <MudTabPanel Text="Engines">
-                <SeasonEngines />
+            <MudTabPanel Text="Entrants">
+                <Entrants />
             </MudTabPanel>
             @if (Season.State == State.Active)
             {
