--- a/SimTECH/SimTECH/Pages/Season/SeasonDrivers.razor
+++ b/SimTECH/SimTECH/Pages/Season/SeasonDrivers.razor
@@ -2,7 +2,7 @@
 @inject SeasonEntrantService EntrantService
 @inject IDialogService DialogService
 
-<MudDataGrid T="SeasonDriver" Items="SeasonDriverEntrants" Loading="_loading" Class="my-2">
+<MudDataGrid T="SeasonDriver" Items="@SeasonDriverEntrants" Loading="@_loading" Class="my-2">
     <ToolBarContent>
         <MudText Typo="Typo.h4">Drivers</MudText>
         <MudSpacer />
@@ -11,10 +11,8 @@
     <Columns>
         <TemplateColumn Title="Name">
             <CellTemplate>
-                <MudText>
-                    <CountryFlag Code="@context.Item.Driver.Country" Size="FlagSize.Small" />
-                    @context.Item.Driver.FullName
-                </MudText>
+                <CountryFlag Code="@context.Item.Driver.Country" Size="FlagSize.Small" />
+                <MudText Typo="Typo.body2">@context.Item.Driver.FullName</MudText>
             </CellTemplate>
         </TemplateColumn>
         <PropertyColumn Property="e => e.Number" Title="Nr." CellStyleFunc="@ViewHelper.DriverTeamStyleFunc" HeaderClass="number-col" CellClass="number-col" Sortable="false" />
@@ -25,11 +23,11 @@
             <CellTemplate>
                 @if (context.Item.SeasonTeam == null)
                 {
-                    <MudText Color="Color.Error">Dropped</MudText>
+                    <MudText Typo="Typo.body2" Color="Color.Error">Dropped</MudText>
                 }
                 else
                 {
-                    <MudText>@context.Item.SeasonTeam.Name</MudText>
+                    <MudText Typo="Typo.body2">@context.Item.SeasonTeam.Name</MudText>
                 }
             </CellTemplate>
         </TemplateColumn>
@@ -50,7 +48,7 @@
     private List<SeasonTeam> TeamEntrants = new();
     private List<Driver> DriverData = new();
 
-    private bool _loading = true;
+    bool _loading = true;
 
     protected override async Task OnInitializedAsync()
     {
